deploy/kubernetes/overlays/production-primary/ingress-patch.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dcarbn-backend
spec:
  tls:
    - hosts: ["carbon.example.com"]
      secretName: dcarbn-production-tls
  rules:
    - host: carbon.example.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dcarbn-frontend
spec:
  tls:
    - hosts: ["carbon.example.com"]
      secretName: dcarbn-production-tls
  rules:
    - host: carbon.example.com
